Make sure the fiters menu is completely visible
The previous solution (setting min-height on #bodyContent)
worked well but in production it contains a large notice
from `pagetriage-welcome` that eats up more of the height
already.

The patch sets min-height on a new div that includes
the list header, results, errors, and footer.

Bug: T205903

--- a/modules/ext.pageTriage.css
+++ b/modules/ext.pageTriage.css
@@ -30,6 +30,6 @@
 }
 
 /** Ensure the filter panel is entirely visible even when there is no results */
-.mw-special-NewPagesFeed #bodyContent {
+.mw-special-NewPagesFeed #mwe-pt-list {
 	min-height: 550px;
 }
